2.1.0.0 backport to MC 1.19.2