@@ -14,6 +14,7 @@ import com.mojang.blaze3d.vertex.PoseStack;
 import io.github.lightman314.lightmanscurrency.LightmansCurrency;
 import io.github.lightman314.lightmanscurrency.client.gui.widget.ScrollBarWidget.IScrollable;
 import io.github.lightman314.lightmanscurrency.client.util.ItemRenderUtil;
+import io.github.lightman314.lightmanscurrency.common.easy.EasyText;
 import io.github.lightman314.lightmanscurrency.common.items.TicketItem;
 import io.github.lightman314.lightmanscurrency.common.traders.item.tradedata.ItemTradeData;
 import io.github.lightman314.lightmanscurrency.common.traders.item.tradedata.restrictions.ItemTradeRestriction;
@@ -25,9 +26,8 @@ import net.minecraft.client.gui.components.AbstractWidget;
 import net.minecraft.client.gui.components.EditBox;
 import net.minecraft.client.gui.narration.NarrationElementOutput;
 import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.network.chat.Component;
+import net.minecraft.core.NonNullList;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.flag.FeatureFlagSet;
 import net.minecraft.world.item.*;
 import net.minecraft.world.item.enchantment.Enchantment;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
@@ -97,7 +97,7 @@ public class ItemEditWidget extends AbstractWidget implements IScrollable{
 	private final Font font;
 
 	public ItemEditWidget(int x, int y, int columns, int rows, IItemEditListener listener) {
-		super(x, y, columns * 18, rows * 18, Component.empty());
+		super(x, y, columns * 18, rows * 18, EasyText.empty());
 		this.listener = listener;
 
 		this.columns = columns;
@@ -117,25 +117,27 @@ public class ItemEditWidget extends AbstractWidget implements IScrollable{
 
 	}
 
-	public static void initItemList(FeatureFlagSet flagSet, boolean hasPermissions) {
+	public static void initItemList() {
+
+		if(preFilteredItems != null)
+			return;
 
 		LightmansCurrency.LogInfo("Pre-filtering item list for Item Edit items.");
-
-		//Force Creative Tab content rebuild
-		CreativeModeTabs.tryRebuildTabContents(flagSet, hasPermissions);
 
 		List<ItemStack> allItems = new ArrayList<>();
 
 		//Go through all the item groups to avoid allowing sales of hidden items
-		for(CreativeModeTab creativeTab : CreativeModeTabs.allTabs())
+		for(CreativeModeTab group : CreativeModeTab.TABS)
 		{
-			if(!ITEM_GROUP_BLACKLIST.contains(creativeTab))
+			if(!ITEM_GROUP_BLACKLIST.contains(group))
 			{
-				//Get all the items in this creative tab
-				Collection<ItemStack> items = creativeTab.getDisplayItems();
+				//Get all the items in this group
+				NonNullList<ItemStack> items = NonNullList.create();
+				group.fillItemList(items);
 				//Add them to the list after confirming we don't already have it in the list
 				for(ItemStack stack : items)
 				{
+
 					if(isItemAllowed(stack))
 					{
 						if(notYetInList(allItems, stack))
@@ -156,13 +158,14 @@ public class ItemEditWidget extends AbstractWidget implements IScrollable{
 							});
 						}
 					}
+
 				}
 			}
 		}
 
 		preFilteredItems = new HashMap<>();
 
-		ItemTradeRestriction.forEach((type, restriction) -> preFilteredItems.put(type, allItems.stream().filter(restriction::allowItemSelectItem).toList()));
+		ItemTradeRestriction.forEach((type, restriction) -> preFilteredItems.put(type, allItems.stream().filter(restriction::allowItemSelectItem).collect(Collectors.toList())));
 
 	}
 
@@ -275,12 +278,12 @@ public class ItemEditWidget extends AbstractWidget implements IScrollable{
 
 	public void init(Function<EditBox,EditBox> addWidget, Function<ScrollListener,ScrollListener> addListener) {
 
-		this.searchInput = addWidget.apply(new EditBox(this.font, this.getX() + this.searchOffX + 2, this.getY() + this.searchOffY + 2, 79, 9, Component.translatable("gui.lightmanscurrency.item_edit.search")));
+		this.searchInput = addWidget.apply(new EditBox(this.font, this.x + this.searchOffX + 2, this.y + this.searchOffY + 2, 79, 9, EasyText.translatable("gui.lightmanscurrency.item_edit.search")));
 		this.searchInput.setBordered(false);
 		this.searchInput.setMaxLength(32);
 		this.searchInput.setTextColor(0xFFFFFF);
 
-		this.stackScrollListener = addListener.apply(new ScrollListener(this.getX() + this.stackSizeOffX, this.getY() + this.stackSizeOffY, 18, 18, this::stackCountScroll));
+		this.stackScrollListener = addListener.apply(new ScrollListener(this.x + this.stackSizeOffX, this.y + this.stackSizeOffY, 18, 18, this::stackCountScroll));
 
 	}
 
@@ -298,11 +301,11 @@ public class ItemEditWidget extends AbstractWidget implements IScrollable{
 		int index = this.scroll * this.columns;
 		for(int y = 0; y < this.rows && index < this.searchResultItems.size(); ++y)
 		{
-			int yPos = this.getY() + y * 18;
+			int yPos = this.y + y * 18;
 			for(int x = 0; x < this.columns && index < this.searchResultItems.size(); ++x)
 			{
 				//Get the slot position
-				int xPos = this.getX() + x * 18;
+				int xPos = this.x + x * 18;
 				//Render the slot background
 				RenderSystem.setShaderTexture(0, GUI_TEXTURE);
 				RenderSystem.setShaderColor(1f, 1f, 1f, 1f);
@@ -316,10 +319,10 @@ public class ItemEditWidget extends AbstractWidget implements IScrollable{
 		//Render the search field
 		RenderSystem.setShaderTexture(0, GUI_TEXTURE);
 		RenderSystem.setShaderColor(1f, 1f, 1f, 1f);
-		this.blit(pose, this.getX() + this.searchOffX, this.getY() + this.searchOffY, 18, 0, 90, 12);
+		this.blit(pose, this.x + this.searchOffX, this.y + this.searchOffY, 18, 0, 90, 12);
 
 		//Render the quantity scroll area
-		this.blit(pose, this.getX() + this.stackSizeOffX, this.getY() + this.stackSizeOffY, 108, 0, 18, 18);
+		this.blit(pose, this.x + this.stackSizeOffX, this.y + this.stackSizeOffY, 108, 0, 18, 18);
 
 	}
 
@@ -344,11 +347,11 @@ public class ItemEditWidget extends AbstractWidget implements IScrollable{
 			}
 		}
 		if(this.isMouseOverStackSizeScroll(mouseX,mouseY))
-			screen.renderTooltip(pose, Component.translatable("tooltip.lightmanscurrency.item_edit.scroll"), mouseX, mouseY);
+			screen.renderTooltip(pose, EasyText.translatable("tooltip.lightmanscurrency.item_edit.scroll"), mouseX, mouseY);
 	}
 
 	private boolean isMouseOverStackSizeScroll(int mouseX, int mouseY) {
-		return mouseX >= this.getX() + this.stackSizeOffX && mouseX < this.getX() + this.stackSizeOffX + 18 && mouseY >= this.getY() + this.stackSizeOffY && mouseY < this.getY() + this.stackSizeOffY + 18;
+		return mouseX >= this.x + this.stackSizeOffX && mouseX < this.x + this.stackSizeOffX + 18 && mouseY >= this.y + this.stackSizeOffY && mouseY < this.y + this.stackSizeOffY + 18;
 	}
 
 	private int isMouseOverSlot(double mouseX, double mouseY) {
@@ -358,12 +361,12 @@ public class ItemEditWidget extends AbstractWidget implements IScrollable{
 
 		for(int x = 0; x < this.columns && foundColumn < 0; ++x)
 		{
-			if(mouseX >= this.getX() + x * 18 && mouseX < this.getX() + (x * 18) + 18)
+			if(mouseX >= this.x + x * 18 && mouseX < this.x + (x * 18) + 18)
 				foundColumn = x;
 		}
 		for(int y = 0; y < this.rows && foundRow < 0; ++y)
 		{
-			if(mouseY >= this.getY() + y * 18 && mouseY < this.getY() + (y * 18) + 18)
+			if(mouseY >= this.y + y * 18 && mouseY < this.y + (y * 18) + 18)
 				foundRow = y;
 		}
 		if(foundColumn < 0 || foundRow < 0)
@@ -379,7 +382,7 @@ public class ItemEditWidget extends AbstractWidget implements IScrollable{
 
 
 	@Override
-	protected void updateWidgetNarration(@NotNull NarrationElementOutput narrator) { }
+	public void updateNarration(@NotNull NarrationElementOutput narrator) { }
 
 	@Override
 	public boolean mouseClicked(double mouseX, double mouseY, int button) {
